--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "entities",
+  "name": "@hu-tao-supremacy/entities",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/hu-tao-supremacy/entities.git",
