--- a/.gitignore
+++ b/.gitignore
@@ -209,3 +209,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,node,bazel,windows,vscode,visualstudiocode
+build/
