--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typeorm": "^0.2.32"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "postinstall": "git submodule update --init"
   }
 }
